update docker image base to jdk20